2005-03-26	Laurent Sansonetti    <lrz@gnome.org>

	*	Fixed my e-mail address

2005-03-26	Liam Davison	<liam@liamjdavison.info>

	*	Added barcode instructions to Add Book pages

	*	Fixed various typos in the Add Book pages

2005-03-17	Liam Davison	<liam@liamjdavison.info>

	*	Initial version of documentation