@@ -1,3 +1,7 @@
+2005-04-07	Liam Davison	<liam@liamjdavison.info>
+
+	* 	Added Internet Bookshop Italia to the online providers list
+
 2005-03-26	Laurent Sansonetti    <lrz@gnome.org>
 
 	*	Fixed my e-mail address
